[package]
name = "kraken_homework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer = "0.2.1"
csv = "1.1"
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
serde = { version = "1", features = ["derive"] }
